samples/_failures_safe/1761637028_0e3ad1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8afdbe6f.c: In function ‘main’:
./samples/SAFE/__tmp_8afdbe6f.c:159:5: error: expected expression at end of input
  159 |     if (
      |     ^~
./samples/SAFE/__tmp_8afdbe6f.c:159:5: error: expected declaration or statement at end of input
